# Aves-Colombia

./: .gitignore  db.sqlite3  manage.py  pyproject.toml
avescolombia/: asgi.py  urls.py  wsgi.py
avescolombia/config/: env.py
avescolombia/config/django/: base.py  local.py  production.py
